Datafit Dic-Enero

--- a/DataFit/Chile_Enero_CepaUK.ipynb
+++ b/DataFit/Chile_Enero_CepaUK.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -589,11 +589,11 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.1s\n",
-      "[Parallel(n_jobs=12)]: Done   2 out of   5 | elapsed:    1.1s remaining:    1.7s\n",
-      "[Parallel(n_jobs=12)]: Done   3 out of   5 | elapsed:    1.2s remaining:    0.8s\n",
-      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    1.5s remaining:    0.0s\n",
-      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    1.5s finished\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.8s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   5 | elapsed:    1.9s remaining:    2.8s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   5 | elapsed:    2.5s remaining:    1.7s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    2.8s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    2.8s finished\n",
       "ready\n"
      ]
     }
@@ -602,6 +602,147 @@
     "num_cores = multiprocessing.cpu_count()\n",
     "sims = Parallel(n_jobs=num_cores, verbose=50)(delayed(simulate)(simulation,i,tsim) for i in range(len(simulation)))\n",
     "simulation = sims\n",
+    "print('ready')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sim cepa UK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Quarantine relaxation\n",
+    "#SPchange_date = datetime(2020,9,11)\n",
+    "#t_sp = (SPchange_date - initdate).days\n",
+    "\n",
+    "beta_uk = 0.016079461886830973\n",
+    "\n",
+    "# Quarantines \n",
+    "max_mob = rem_mob*beta_uk/(rem_mob*beta)\n",
+    "rem_mob = 0.45\n",
+    "\n",
+    "Q_UK = Quarantine(rem_mob,max_mob,qp=0,iqt=0,fqt=navidad_day)\n",
+    "\n",
+    "alpha_UK = Q_UK.alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6991070385578684"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_mob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation_uk = [SEIRHVD(tsim,beta,mu,alpha_UK,k_I=k_I,k_R = k_R, chi = i,\n",
+    "                      Htot=10000,Vtot=int(state.UCI_capacity[0]),H0=1000,V0=state.UCI_use_covid[0],B0=state.Br[0],D0=state.Dr[0]\n",
+    "                      ,R0=state.I_ac_r[0]-state.I_ac_r[0]*0.1,I0=state.Ir[0],I_d0=state.I_d_r[0],I_ac0=state.I_ac_r[0],\n",
+    "                      SeroPrevFactor=SeroPrevFactor,expinfection=expinfection,initdate = initdate,\n",
+    "                      Imi_det = Imi_det,Ias_det = Ias_det,population = state.population) for i in chi]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compartimental model State parameters changed\n",
+      "Compartimental model State parameters changed\n",
+      "Compartimental model State parameters changed\n",
+      "Compartimental model State parameters changed\n",
+      "Compartimental model State parameters changed\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(simulation_uk)):\n",
+    "    simulation_uk[i].pE_Ias=pE_Ias\n",
+    "    simulation_uk[i].tE_Ias=tE_Ias\n",
+    "    simulation_uk[i].pE_Imi=pE_Imi\n",
+    "    simulation_uk[i].tE_Imi=tE_Imi\n",
+    "    simulation_uk[i].pE_Icr=pE_Icr\n",
+    "    simulation_uk[i].tE_Icr=tE_Icr\n",
+    "    simulation_uk[i].pE_Ise=pE_Ise\n",
+    "    simulation_uk[i].tE_Ise=tE_Ise\n",
+    "    simulation_uk[i].pIas_R=pIas_R\n",
+    "    simulation_uk[i].tIas_R =tIas_R\n",
+    "    simulation_uk[i].pImi_R=pImi_R\n",
+    "    simulation_uk[i].tImi_R =tImi_R\n",
+    "    simulation_uk[i].pIse_Hse=pIse_Hse\n",
+    "    simulation_uk[i].tIse_Hse=tIse_Hse\n",
+    "    simulation_uk[i].pIse_D=pIse_D\n",
+    "    simulation_uk[i].tIse_D=tIse_D\n",
+    "    simulation_uk[i].pIcr_V=pIcr_V\n",
+    "    simulation_uk[i].tIcr_V=tIcr_V\n",
+    "    simulation_uk[i].pIcr_D=pIcr_D\n",
+    "    simulation_uk[i].tIcr_D=tIcr_D\n",
+    "    simulation_uk[i].pHse_R=pHse_R\n",
+    "    simulation_uk[i].tHse_R =tHse_R\n",
+    "    simulation_uk[i].pHse_V=pHse_V\n",
+    "    simulation_uk[i].tHse_V=tHse_V\n",
+    "    simulation_uk[i].pHse_D=pHse_D\n",
+    "    simulation_uk[i].tHse_D=tHse_D\n",
+    "    simulation_uk[i].pV_Hout=pV_Hout\n",
+    "    simulation_uk[i].tV_Hout =tV_Hout\n",
+    "    simulation_uk[i].pV_D=pV_D\n",
+    "    simulation_uk[i].tV_D =tV_D\n",
+    "    simulation_uk[i].pHout_R=pHout_R\n",
+    "    simulation_uk[i].tHout_R=tHout_R\n",
+    "    simulation_uk[i].setnewparams()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
+      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    2.5s\n",
+      "[Parallel(n_jobs=12)]: Done   2 out of   5 | elapsed:    2.7s remaining:    4.1s\n",
+      "[Parallel(n_jobs=12)]: Done   3 out of   5 | elapsed:    2.7s remaining:    1.8s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    2.9s remaining:    0.0s\n",
+      "[Parallel(n_jobs=12)]: Done   5 out of   5 | elapsed:    2.9s finished\n",
+      "ready\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_cores = multiprocessing.cpu_count()\n",
+    "sims = Parallel(n_jobs=num_cores, verbose=50)(delayed(simulate)(simulation_uk,i,tsim) for i in range(len(simulation_uk)))\n",
+    "simulation_uk = sims\n",
     "print('ready')"
    ]
   },
@@ -621,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,16 +795,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "73"
+       "76"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +815,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim_UK= False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,8 +834,13 @@
     "\n",
     "for i in range(len(simulation)):\n",
     "    axs[0,0].plot(dates[i],simulation[i].I_ac_det,label='RF: '+str(renewalFactor[i])+' | SP_R: '+str(round(100*SeroPrevalence[i],2))+'%'+' | SP_D:'+str(round(100*SeroPrevalenceDet[i],2))+'%',color=colors[i])\n",
+    "    if sim_UK:\n",
+    "        axs[0,0].plot(dates[i],simulation_uk[i].I_ac_det,color=colors[i],linestyle='dashed')\n",
     "axs[0,0].set_title('Accumulated Infected')\n",
     "axs[0,0].set_xlim(initdate,enddate)\n",
+    "axs[0,0].set_ylim(0,1.5e6)\n",
+    "\n",
+    "\n",
     "axs[0,0].scatter(state.I_ac_r_dates,state.I_ac_r)\n",
     "#axs[0,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
     "#axs[0,0].axvline(x = datetime(2020,8,22), linestyle = 'dotted',color = 'grey',label='Inicio Cuarentena')\n",
@@ -709,8 +864,13 @@
     "\n",
     "for i in range(len(simulation)):\n",
     "    axs[0,1].plot(dates[i],simulation[i].B,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
+    "    if sim_UK:\n",
+    "        axs[0,1].plot(dates[i],simulation_uk[i].B,color=colors[i],linestyle='dashed')\n",
+    "    \n",
     "axs[0,1].set_title('Accumulated Deaths')\n",
     "axs[0,1].set_xlim(initdate,enddate)\n",
+    "axs[0,1].set_ylim(0,1e4)\n",
+    "\n",
     "axs[0,1].scatter(state.Br_dates,state.Br,label='Muertes Totales')\n",
     "#axs[0,1].scatter(state.hosp_dates,state.Br_hosp,label='Muertes Hospitalizados')\n",
     "#axs[0,1].scatter(state.hosp_dates,state.Br_Nonhosp,label='Muertes No Hospitalizados')\n",
@@ -733,8 +893,12 @@
     "\n",
     "for i in range(len(simulation)):    \n",
     "    axs[1,0].plot(dates[i],simulation[i].I_d_det,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
+    "    if sim_UK:\n",
+    "        axs[1,0].plot(dates[i],simulation_uk[i].I_d_det,color=colors[i],linestyle='dashed')    \n",
     "axs[1,0].set_title('New Daily Infected')\n",
     "axs[1,0].set_xlim(initdate,enddate)\n",
+    "axs[1,0].set_ylim(0,1e4)\n",
+    "\n",
     "axs[1,0].scatter(state.I_d_r_dates,state.I_d_r)\n",
     "\n",
     "#axs[1,0].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
@@ -754,11 +918,16 @@
     "\n",
     "for i in range(len(simulation)):        \n",
     "    axs[1,1].plot(dates[i],simulation[i].V,label='RenewalFactor: '+str(renewalFactor[i]),color=colors[i])\n",
-    "    axs[1,1].plot(dates[i],simulation[i].V_need,linestyle='dashed',color=colors[i])\n",
+    "    #axs[1,1].plot(dates[i],simulation[i].V_need,linestyle='dashed',color=colors[i])\n",
+    "    if sim_UK:\n",
+    "        axs[1,1].plot(dates[i],simulation_uk[i].V,color=colors[i],linestyle='dashed')    \n",
     "axs[1,1].set_title('UCI Usage')\n",
     "axs[1,1].set_xlim(initdate,enddate)\n",
+    "axs[1,1].set_ylim(0,3e3)\n",
+    "\n",
     "axs[1,1].scatter(state.UCI_dates,state.UCI_use_covid,label='UCI covid use')\n",
-    "axs[1,1].plot(state.UCI_dates,state.UCI_capacity,label='UCI Capacity', linestyle = 'dashed', color = 'grey')\n",
+    "#axs[1,1].plot(state.UCI_dates,state.UCI_capacity,label='UCI Capacity', linestyle = 'dashed', color = 'grey')\n",
+    "axs[1,1].plot(simulation[0].dates,simulation[0].V_cap,label='UCI Capacity', linestyle = 'dashed', color = 'grey')\n",
     "\n",
     "\n",
     "#axs[1,1].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
@@ -779,12 +948,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(simulation)):\n",
-    "    plt.plot(simulation[i].t,simulation[i].I,label='RF: '+str(renewalFactor[i])+' | SP_R: '+str(round(100*SeroPrevalence[i],2))+'%'+' | SP_D:'+str(round(100*SeroPrevalenceDet[i],2))+'%',color=colors[i])\n",
+    "    plt.plot(simulation[i].dates,simulation[i].I_det,label='RF: '+str(renewalFactor[i])+' | SP_R: '+str(round(100*SeroPrevalence[i],2))+'%'+' | SP_D:'+str(round(100*SeroPrevalenceDet[i],2))+'%',color=colors[i])\n",
+    "    plt.plot(simulation[i].dates,simulation[i].I_d_det,label='RF: '+str(renewalFactor[i])+' | SP_R: '+str(round(100*SeroPrevalence[i],2))+'%'+' | SP_D:'+str(round(100*SeroPrevalenceDet[i],2))+'%',color=colors[i])\n",
+    "plt.scatter(state.Ir_dates,state.Ir)\n",
     "plt.legend(loc=0)\n",
     "plt.show()"
    ]
@@ -814,6 +985,15 @@
    "outputs": [],
    "source": [
     "SeroPrevalenceDet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(simulation)"
    ]
   },
   {
