--- a/DataFit/RM_Dic.ipynb
+++ b/DataFit/RM_Dic.ipynb
@@ -119,7 +119,7 @@
       "Importing Active infected\n",
       "Importing Accumulated Infected\n",
       "Importing Daily Infected\n",
-      "Importing Sochimi Data 2\n",
+      "Importing ICU Beds Data\n",
       "Importing Deaths by DEIS\n",
       "Importing Active Infected by Minciencia\n",
       "Importing Hospitalized/NonHospitalized Deaths\n",
@@ -154,23 +154,6 @@
    "source": [
     "state.name = 'Región Metropolitana'\n",
     "state.population"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Datos de Hospitalizados a fitear"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state.Hr = np.array(state.UTI)\n",
-    "state.Hr_tot = np.array(state.UTI_tot)"
    ]
   },
   {
@@ -381,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f292caecd90>"
+       "<matplotlib.legend.Legend at 0x7f02346464f0>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +473,7 @@
        "datetime.datetime(2020, 5, 15, 0, 0)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,14 +484,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "InitialCondition Object Data\n"
+     "ename": "AttributeError",
+     "evalue": "'ImportData' object has no attribute 'sochimi_tr'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-19b06db6b334>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msimulation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mSEIRHVD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtsim\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk_I\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mk_I\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk_R\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mk_R\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeroPrevFactor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mSeroPrevFactor\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mexpinfection\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mexpinfection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mRealIC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mImi_det\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImi_det\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mIas_det\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mIas_det\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-17-19b06db6b334>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msimulation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mSEIRHVD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtsim\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk_I\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mk_I\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk_R\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mk_R\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeroPrevFactor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mSeroPrevFactor\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mexpinfection\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mexpinfection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mRealIC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mImi_det\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImi_det\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mIas_det\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mIas_det\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/covid19geomodeller/src/SEIRHVD/class_SEIRHUVD5.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, tsim, beta, mu, alpha, k, chi, k_I, k_R, Htot, Vtot, H0, V0, B0, D0, R0, I0, I_d0, I_ac0, SeroPrevFactor, expinfection, population, RealIC, initdate, Imi_det, Ias_det, Ise_det, Icr_det, SimIC)\u001b[0m\n\u001b[1;32m    105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m             \u001b[0;31m# Aproximate Hospitals capacity:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 107\u001b[0;31m             \u001b[0mHcmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpoly1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpolyfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mIC\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msochimi_tr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIC\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHr_tot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m             \u001b[0mtsat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mIC\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msochimi_tr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m             \u001b[0mHmax\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mIC\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHr_tot\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ImportData' object has no attribute 'sochimi_tr'"
      ]
     }
    ],
@@ -525,14 +514,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Compartimental model State parameters changed\n"
+     "ename": "NameError",
+     "evalue": "name 'simulation' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-8a0dadc9df62>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msimulation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0msimulation\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpE_Ias\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpE_Ias\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0msimulation\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtE_Ias\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtE_Ias\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0msimulation\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpE_Imi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpE_Imi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0msimulation\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtE_Imi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtE_Imi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'simulation' is not defined"
      ]
     }
    ],
@@ -592,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,20 +596,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=12)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=12)]: Done   1 tasks      | elapsed:    1.2s\n",
-      "[Parallel(n_jobs=12)]: Done   1 out of   1 | elapsed:    1.2s finished\n",
-      "ready\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_cores = multiprocessing.cpu_count()\n",
     "sims = Parallel(n_jobs=num_cores, verbose=50)(delayed(simulate)(simulation,i,tsim) for i in range(len(simulation)))\n",
